# Libcurl

./: README.md
multi-download/: CMakeLists.txt  url-list.txt
multi-download/inc/: ftp.h  sftp.h  struct.h  thread.h
multi-download/src/: curlImpl.c  ftpImpl.c  main.c  sftpImpl.c  threadImpl.c
